--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
       "react/no-danger": [0],
       "no-param-reassign": [0],
       "react-hooks/rules-of-hooks": "error",
+      "import/no-named-as-default": 0,
       "react-hooks/exhaustive-deps": "warn"
     }
   }
