--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^8.2.5",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-avatar-editor": "^11.1.0",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
