--- a/chat-app-main/package.json
+++ b/chat-app-main/package.json
@@ -11,11 +11,13 @@
     "react": "^17.0.1",
     "react-avatar-editor": "^11.1.0",
     "react-dom": "^17.0.1",
+    "react-mic": "^12.4.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "rsuite": "^4.8.8",
     "timeago-react": "^3.0.2",
+    "use-context-selector": "^1.3.7",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
